Project has completed and ready to review

--- a/about.html
+++ b/about.html
@@ -36,17 +36,17 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="about-header px-3">
+    <section class="about-header px-4 px-lg-0">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
-                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                    <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
@@ -69,31 +69,33 @@
             </div>
         </nav>
         <div class="header-content container text-white">
-            <div class="row">
-                <div class='col-md-6'>
-                    <p class="text-white fw-bold mb-1">Our background</p>
-                    <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
-                        Passionate about
-                        <br class="d-xs-none d-md-block" />
-                        empowering
-                        <br class="d-xs-none d-md-block" />
-                        small businesses
-                    </h2>
+            <div class="container">
+                <div class="row">
+                    <div class='col-12 col-lg-6'>
+                        <p class="text-white fw-bold mb-2">Our background</p>
+                        <h1 class="header-content-heading text-light-blue fw-bold mb-4">
+                            Passionate about
+                            <br class="d-xs-none d-md-block" />
+                            empowering
+                            <br class="d-xs-none d-md-block" />
+                            small businesses
+                        </h1>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Section Header end  -->
     <!-- Section solution start  -->
-    <section class="py-4 py-md-5 px-3">
-        <div class="container p-0">
+    <section class="py-4 py-md-5 px-4 px-lg-0">
+        <div class="container">
             <div class="row">
-                <div class="col-12 col-md-4 text-left mb-4">
+                <div class="col-12 col-lg-4 text-left mb-4">
                     <h2 class="text-blue fw-bold">
                         Geidans Solutions was found in 2000 at the turn of the new millennium
                     </h2>
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-lg-8">
                     <p class="text-blue">
                         Our 60+ team handle 100 business transformation projects a year, with
                         operations and technical development based in Latvia, Eastren Europe and the
@@ -116,7 +118,7 @@
     </section>
     <!-- Section solutions end  -->
     <!-- Section Review start -->
-    <section class="section-review px-3 bg-orange">
+    <section class="section-review bg-orange px-4 px-lg-0">
         <div class="container">
             <div class="fw-bold text-white d-flex align-items-top mb-4">
                 <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
@@ -147,11 +149,11 @@
 
     <!-- Section Contact start -->
     <!-- Section Contact start -->
-    <section class="section-contact px-3">
+    <section class="section-contact px-4 px-lg-0">
         <div class="container">
             <div class="row">
-                <div class="col-md-7 d-none d-lg-block">
-                    <h3 class="text-blue fw-bold mb-3 ">
+                <div class="col-lg-7 d-none d-lg-block">
+                    <h3 class="text-blue fw-bold mb-3">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-white fw-bolder lh-1 mb-0">
@@ -159,8 +161,8 @@
                         <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
                     </h3>
                 </div>
-                <div class="col-md-7 d-block d-lg-none">
-                    <h3 class="text-blue mb-0 ">
+                <div class="col-lg-7 d-block d-lg-none">
+                    <h3 class="text-blue mb-2">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </h3>
                     <h3 class="text-blue fw-bolder lh-1 mb-0">
@@ -174,7 +176,7 @@
     <!-- Section Contact end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-5 px-3 px-lg-0">
+    <footer class="footer bg-blue py-5 px-4 px-lg-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
@@ -186,7 +188,7 @@
                         <span class="ms-2">+44 (0) 3333 444 151</span>
                     </a>
                     <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
-                        <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
+                        <img src="./assets/Icon images/Email_icon.png" alt="email" class="email-icon">
                         <span class="ms-2">hello@geidans.co.uk</span>
                     </a>
                     <p class="text-white mb-2 fw-light">Address line 1</p>
@@ -226,7 +228,7 @@
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
-                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between text-center">
+                    <div class="d-flex flex-column align-items-center flex-lg-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
                             <a href="#"
