--- a/career.html
+++ b/career.html
@@ -36,17 +36,17 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="career-header px-3">
+    <section class="career-header px-4 px-lg-0">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
-                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                    <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
@@ -68,15 +68,17 @@
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white">
-            <div class="row">
-                <div class='col-md-6'>
-                    <p class="text-white fw-bold">Career</p>
-                    <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
-                        Passionate about IT?
-                        <br />
-                        Come and work for us.
-                    </h2>
+        <div class="header-content text-white">
+            <div class="container">
+                <div class="row">
+                    <div class='col-lg-6'>
+                        <p class="text-white fw-bold mb-0 mb-md-2">Career</p>
+                        <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
+                            Passionate about IT?
+                            <br class="d-none d-lg-block" />
+                            Come and work for us.
+                        </h2>
+                    </div>
                 </div>
             </div>
         </div>
@@ -84,61 +86,73 @@
     <!-- Section Header end  -->
 
     <!-- Main card section start  -->
-    <section class="py-4 py-lg-5 px-3">
-        <div class="container p-0">
+    <section class="career-main-section px-4 px-lg-0">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-8">
-                    <h2 class="text-orange fw-bolder mb-4">
+                    <h2 class="text-orange fw-bolder mb-lg-5 d-none d-lg-block">
                         Porem ipsum dolor sit amet consectetur adipisicing elit. Ducimus impedit itaque ad.
                     </h2>
-                    <p class="text-blue mb-4">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit rerum officia ea, modi voluptas
-                        totam illum cum cumque temporibus dolores repudiandae labore recusandae, harum ipsum dolorem,
-                        repellat libero esse unde a animi alias ratione sequi. Earum suscipit deleniti non minus
-                        voluptatum eaque reprehenderit maxime ratione excepturi quisquam, voluptas reiciendis deserunt
-                        nemo quos eligendi delectus. Quaerat nesciunt est magnam architecto ipsa.
+
+                    <p class="text-orange fw-bolder mb-lg-5 d-block d-lg-none">
+                        Porem ipsum dolor sit amet consectetur adipisicing elit. Ducimus impedit itaque ad.
                     </p>
-                    <p class="text-blue mb-4">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum minus harum aliquam hic
-                        consequatur vitae corrupti at laboriosam natus quasi commodi, obcaecati rem ipsam ratione nobis.
-                        Impedit exercitationem sint doloribus est similique eos hic. Assumenda porro voluptate ea eos
-                        dolor?
+                    <p class="text-blue mb-5">
+                        Nullam fermentum nunc orci, eu pharetra enim molestie
+                        eget. Donec sed iaculis justo, quis consectetur nisi. In blandit
+                        turpis turpis, sit amet cursus nisi hendrerit bibendum. Vivamus
+                        posuere sapien a est laoreet volutpat. Fusce commodo arcu
+                        sapien, eu laoreet felis tincidunt quis. Aliquam fermentum
+                        enim metus. Cras ac ligula vitae augue sodales mattis. Donec
+                        vel pretium purus, eu convallis nibh. Fusce commodo arcu
+                        sapien, eu laoreet felis tincidunt quis. Aliquam fermentum
+                        enim metus. Cras ac ligula vitae augue sodales mattis. Donec
+                        vel pretium purus, eu convallis nibh.
                     </p>
-                    <p class="text-blue mb-4">
+                    <p class="text-blue mb-5">
+                        Donec sed iaculis justo, quis consectetur nisi. In blandit
+                        turpis turpis, sit amet cursus nisi hendrerit bibendum. Vivamus
+                        posuere sapien a est laoreet volutpat. Fusce commodo arcu
+                        sapien, eu laoreet felis tincidunt quis. Aliquam fermentum
+                        enim metus.
+                    </p>
+                    <p class="text-blue mb-5 mb-lg-0">
+                        Doloribus illo accusamus dolorem ipsum
+                        optio saepe impedit vel explicabo excepturi ipsa?
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus illo accusamus dolorem ipsum
                         optio saepe impedit vel explicabo excepturi ipsa?
                     </p>
                 </div>
                 <div class="col-12 col-lg-4">
                     <h2 class="text-blue fw-bolder">Current vacancies</h2>
-                    <div class="vacancie-card mb-4">
-                        <p class="text-blue fw-bolder mb-1">Job title</p>
+                    <div class="vacancie-card-1 mb-5 pt-3">
+                        <p class="text-blue fw-bolder mb-2">Job title</p>
                         <p class="text-blue mb-1">30k-40k per annum</p>
-                        <p class="text-blue mb-1">Swindon</p>
+                        <p class="text-blue mb-2">Swindon</p>
                         <p class="text-blue">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil ullam reprehenderit
                             dolores quibusdam impedit deleniti doloremque
                         </p>
-                        <button class="btn btn-view-detail bg-light-blue text-uppercase text-white rounded-0">
-                            View details
+                        <button class="btn btn-view-detail bg-light-blue text-white rounded-0 fw-bold">
+                            VIEW DETAILS
                         </button>
                     </div>
-                    <div class="vacancie-card">
+                    <div class="vacancie-card-2 pt-3">
                         <p class="text-blue fw-bolder mb-1">Job title</p>
                         <p class="text-blue mb-1">30k-40k per annum</p>
-                        <p class="text-blue mb-1">Swindon</p>
-                        <p class="text-blue">
+                        <p class="text-blue mb-2">Swindon</p>
+                        <p class="text-blue mb-4">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil ullam reprehenderit
                             dolores quibusdam impedit deleniti doloremque
                         </p>
-                        <button class="btn btn-view-detail bg-light-blue text-uppercase text-white rounded-0">
-                            View details
+                        <button class="btn btn-view-detail bg-light-blue text-white rounded-0 fw-bold">
+                            VIEW DETAILS
                         </button>
                     </div>
                 </div>
             </div>
-            <div class="row mt-4">
-                <div class="col-12 col-lg-4">
+            <div class="row pt-5">
+                <div class="col-12 col-lg-4 mb-4 mb-lg-0">
                     <div class="card career-card border-0">
                         <div class="card-img-top w-100 my-0">
                             <video class="video my-0" width="100%" height="240" controls>
@@ -147,15 +161,15 @@
                                 Your browser does not support the video tag.
                             </video>
                         </div>
-                        <div class="card-body px-0">
-                            <h5 class="card-title text-blue fw-bolder">John Smith</h5>
-                            <p class="card-text text-blue">
+                        <div class="card-body p-0">
+                            <h5 class="card-title text-blue fw-bolder mt-3 mb-1">John Smith</h5>
+                            <p class="card-text text-blue mb-0">
                                 Developer
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-4 mb-4 mb-lg-0">
                     <div class="card career-card border-0">
                         <div class="card-img-top w-100 my-0">
                             <video class="video my-0" width="100%" height="240" controls>
@@ -164,15 +178,15 @@
                                 Your browser does not support the video tag.
                             </video>
                         </div>
-                        <div class="card-body px-0">
-                            <h5 class="card-title text-blue fw-bolder">John Smith</h5>
-                            <p class="card-text text-blue">
+                        <div class="card-body p-0">
+                            <h5 class="card-title text-blue fw-bolder mt-3 mb-1">John Smith</h5>
+                            <p class="card-text text-blue mb-0">
                                 Developer
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-12 col-lg-4 mb-4 mb-lg-0">
                     <div class="card career-card border-0">
                         <div class="card-img-top w-100 my-0">
                             <video class="video my-0" width="100%" controls>
@@ -181,9 +195,9 @@
                                 Your browser does not support the video tag.
                             </video>
                         </div>
-                        <div class="card-body px-0">
-                            <h5 class="card-title text-blue fw-bolder">John Smith</h5>
-                            <p class="card-text text-blue">
+                        <div class="card-body p-0">
+                            <h5 class="card-title text-blue fw-bolder mt-3 mb-1">John Smith</h5>
+                            <p class="card-text text-blue mb-0">
                                 Developer
                             </p>
                         </div>
@@ -195,43 +209,46 @@
     <!-- Main card section end  -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-4 px-3 px-lg-0">
-        <div class="container p-0">
+    <footer class="footer bg-blue py-5 px-4 px-lg-0">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
+                    <h5 class="text-white fw-bold text-uppercase mb-4">
                         get in touch
                     </h5>
-                    <a href="#" class="text-white text-decoration-none d-block mb-2">
+                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
                         <span><i class="fa fa-phone-alt"></i></span>
                         <span class="ms-2">+44 (0) 3333 444 151</span>
                     </a>
-                    <a href="#" class="text-white text-decoration-none d-block mb-2">
-                        <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
+                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
+                        <img src="./assets/Icon images/Email_icon.png" alt="email" class="email-icon">
                         <span class="ms-2">hello@geidans.co.uk</span>
                     </a>
-                    <p class="text-white mb-0">Address line 1</p>
-                    <p class="text-white mb-0">Address line 2</p>
-                    <p class="text-white mb-0">Address line 3</p>
+                    <p class="text-white mb-2 fw-light">Address line 1</p>
+                    <p class="text-white mb-2 fw-light">Address line 2</p>
+                    <p class="text-white mb-0 fw-light">Address line 3</p>
                 </div>
                 <div class="col-lg-4 d-none d-lg-block ">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bold text-uppercase mb-4">
                         link column here
                     </h5>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block">Link 1</a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-4">
                         services
                     </h5>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Systems integration</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Bespoke applications</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Consulting</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Data migration</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Application refactoring</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Systems
+                        integration</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Bespoke
+                        applications</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Consulting</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Data migration</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0">Application
+                        refactoring</a>
                 </div>
             </div>
         </div>
@@ -240,23 +257,28 @@
     <!-- Footer end -->
 
     <!-- Section Copyright start -->
-    <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
+    <div class="footer-copyright px-3 px-md-0 pt-4 py-lg-3  bg-dark-blue">
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
-                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
+                    <div class="d-flex flex-column align-items-center flex-lg-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Privacy & GDPR
                             </a>
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Terms
                             </a>
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Legal Notice
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
+                            <a href="#"
+                                class="text-decoration-none text-white d-block ps-3 lh-1 py-1 py-lg-0 ">Accessibility
+                            </a>
                         </div>
                     </div>
                 </div>
