--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,8 @@
                 </div>
             </div>
         </nav>
-        <div class="contact-header-contenttext-white py-4">
+        <div class="contact-header-content text-white py-md-4">
             <p class="d-block d-md-none text-white fw-bolder">Contact us</p>
-
-
         </div>
     </section>
     <!-- Section Header end  -->
