--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                 <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
-                <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <i class="fas fa-bars px-1"></i>
