--- a/whyus.html
+++ b/whyus.html
@@ -36,50 +36,51 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="whyus-header px-3">
+    <section class="whyus-header px-4">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
-            <div class="container p-0">
-                <a class="navbar-brand" href="home.html">
+            <div class="container">
+                <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
-                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                    <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-uppercase active text-white" aria-current="page"
-                                href="whatwedo.html">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
+                        <li class="nav-item px-lg-2">
+                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white">
-            <div class="row">
-                <div class='col-md-6'>
-                    <p class="text-white fw-bold">Why us</p>
-                    <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
-                        A Geidans Solutions
-                        <br class="d-xs-block d-md-none" />
-                        gets the best out of
-                        <br class="d-xs-none d-md-block" />
-                        your business
-                    </h2>
+        <div class="whyus-header-content text-white pt-3">
+            <div class="container">
+                <div class="row">
+                    <div class='col-md-6'>
+                        <p class="text-white fw-bold mb-lg-2">Why us</p>
+                        <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-0">
+                            A Geidans Solutions
+                            <br class="d-xs-none d-lg-block" />
+                            gets the best out of
+                            <br class="d-xs-none d-lg-block" />
+                            your business
+                        </h2>
+                    </div>
                 </div>
             </div>
         </div>
@@ -87,63 +88,62 @@
     <!-- Section Header end  -->
 
     <!-- Section details start  -->
-    <section class="py-0 py-md-5">
+    <section class="px-4 px-lg-0 whyus-section-main">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-8">
-                    <section class="px-3 py-4 py-md-0">
-                        <p class="text-blue fw-bolder">
-                            When you're in a period of rapid growth, it can feel like
-                            the business is controlling you, rather than the other way
-                            around. Geidans Solutions puts you back in control
-                        </p>
-                        <p class="text-blue fw-bolder mb-4">
-                            What does control look like? Reduced costs, higher returns,
-                            faster turnarounds and far better communication.
-                        </p>
-                        <h2 class="fw-bold text-blue">We are client-focused, solution driven</h2>
-                        <p class="text-blue">
-                            We are genuinely committed to improving your performance. We hold ourselves accountable,
-                            which means we treat your business as if it was our own. As proof, we don't charge for the
-                            analysis stage.
-                        </p>
-                        <h2 class="fw-bold text-blue">We never sell you what you don't need</h2>
-                        <p class="text-blue">
-                            We never oversell. if we don't think you need a new piece of software,
-                            we will say so and explain
-                            why. And if your problem isn't software issue, we won't pretent it is.
-                        </p>
-                        <h2 class="fw-bold text-blue">We look for the simples solution first.</h2>
-                        <p class="text-blue">
-                            Simple solutions can deliver big results. If there's a software solutions
-                            out thre in the market, we'll identify it. If not, we'll recommend a bespoke
-                            solution (embedded link to Services) and build it for you. If we don't see on ROI
-                            in the first 12 months, we won't do it.
-                        </p>
-                        <h2 class="fw-bold text-blue">We call it like it is</h2>
-                        <p class="text-blue">
-                            We're not afraid to be honest - as independent consultants we are impartial
-                            in our advice. 90% of the time we feel like insiders, but it's the 10% independent insight
-                            that brings real clarity to your business.
-                        </p>
-                        <h2 class="fw-bold text-blue">We're straight-talking software specialists</h2>
-                        <p class="text-blue">
-                            Software always sounds complex and full of strange terminology.
-                            We speak software in language you understand - and we can talk tech with
-                            your IT department, so you don't have to!
-                        </p>
-                    </section>
+                    <p class="text-blue fw-bolder mb-3">
+                        When you're in a period of rapid growth, it can feel like
+                        the business is controlling you, rather than the other way
+                        around. Geidans Solutions puts you back in control
+                    </p>
+                    <p class="text-blue fw-bolder mb-5">
+                        What does control look like? Reduced costs, higher returns,
+                        faster turnarounds and far better communication.
+                    </p>
+                    <h3 class="fw-bold text-blue mb-2">We are client-focused, solution driven</h3>
+                    <p class="text-blue mb-5">
+                        We are genuinely committed to improving your performance. We hold ourselves accountable,
+                        which means we treat your business as if it was our own. As proof, we don't charge for the
+                        analysis stage.
+                    </p>
+                    <h3 class="fw-bold text-blue mb-2">We never sell you what you don't need</h3>
+                    <p class="text-blue mb-5">
+                        We never oversell. if we don't think you need a new piece of software,
+                        we will say so and explain
+                        why. And if your problem isn't software issue, we won't pretent it is.
+                    </p>
+                    <h3 class="fw-bold text-blue mb-2">We look for the simples solution first.</h3>
+                    <p class="text-blue mb-5">
+                        Simple solutions can deliver big results. If there's a software solutions
+                        out thre in the market, we'll identify it. If not, we'll recommend a bespoke
+                        solution (embedded link to Services) and build it for you. If we don't see on ROI
+                        in the first 12 months, we won't do it.
+                    </p>
+                    <h3 class="fw-bold text-blue mb-2">We call it like it is</h3>
+                    <p class="text-blue mb-5">
+                        We're not afraid to be honest - as independent consultants we are impartial
+                        in our advice. 90% of the time we feel like insiders, but it's the 10% independent insight
+                        that brings real clarity to your business.
+                    </p>
+                    <h3 class="fw-bold text-blue mb-2">We're straight-talking software specialists</h3>
+                    <p class="text-blue">
+                        Software always sounds complex and full of strange terminology.
+                        We speak software in language you understand - and we can talk tech with
+                        your IT department, so you don't have to!
+                    </p>
                 </div>
                 <div class="col-12 col-md-4 bg-orange ">
-                    <section class="section-review py-4 py-md-5 px-3 mb-0">
-                        <div class="fw-bold text-white d-flex flex-row flex-md-column mb-4">
-                            <h1 class="left-quote align-self-bottom">&#8220;</h1>
-                            <h2 class="section-review-heading ms-md-2 ">
+                    <section class="section-review pt-4 mb-0 d-none d-lg-block">
+                        <div class="fw-bold text-white d-flex flex-lg-column align-items-top mb-4">
+                            <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
+                            <img src="./assets/Icon images/“.png" alt="quote" class="img-quote d-none d-lg-block mb-3">
+                            <h2 class="section-review-heading fw-bold ms-lg-2 lh-1">
                                 GS ynderstood our challenges
                                 straight away<span class="right-quote">&#8221;</span>
                             </h2>
                         </div>
-                        <p class="text-blue fw-normal mb-4">
+                        <p class="text-blue mb-5 fw-light">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur
                             enim ut
                             excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit
@@ -154,34 +154,68 @@
                             error
                             deleniti! Lorem ipsum dolor
                         </p>
-                        <div class="d-flex mb-4">
-                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                            <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                            <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
+                        <div class="d-flex mb-3">
+                            <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                            <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                            <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                            <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                            <img src="./assets/Icon images/star-half.png" alt="star" class="star-icon-half">
                         </div>
-                        <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
-                    </section>
+                        <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
                 </div>
+    </section>
+    <section class="section-review px-4 px-lg-0 bg-orange d-lg-none">
+        <div class="container">
+            <div class="fw-bold text-white d-flex align-items-top mb-4">
+                <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
+                <img src="./assets/Icon images/“.png" alt="quote" class="d-none d-lg-block">
+                <h2 class="section-review-heading fw-bold ms-lg-2 lh-1">
+                    GS ynderstood our challenges
+                    straight away<span class="right-quote">&#8221;</span>
+                </h2>
             </div>
+            <p class="text-blue mb-5 fw-light">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
+                excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
+                similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
+                Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
+                deleniti! Lorem ipsum dolor
+            </p>
+            <div class="d-flex mb-3">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star-half.png" alt="star" class="star-icon-half">
+            </div>
+            <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
         </div>
+    </section>
     </section>
     <!-- Section details start  -->
 
 
     <!-- Section Contact start -->
-    <section class="section-contact py-4 py-md-5 px-3">
+    <section class="section-contact px-4 px-lg-0">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
-                    <p class="text-blue">
+                <div class="col-md-7 d-none d-lg-block">
+                    <h3 class="text-blue fw-bold mb-3">
                         Want to work better, grow faster and compete on a bigger playing field?
-                    </p>
-                    <p class="text-white">
+                    </h3>
+                    <h3 class="text-white fw-bolder lh-1 mb-0">
                         Give us a call on
                         <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
-                    </p>
+                    </h3>
+                </div>
+                <div class="col-md-7 d-block d-lg-none">
+                    <h3 class="text-blue mb-2">
+                        Want to work better, grow faster and compete on a bigger playing field?
+                    </h3>
+                    <h3 class="text-blue fw-bolder lh-1 mb-0">
+                        Give us a call on
+                        <span class="d-block d-md-inline-block">+44 (0) 3333 444 151</span>
+                    </h3>
                 </div>
             </div>
         </div>
