--- a/team.html
+++ b/team.html
@@ -36,71 +36,74 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="team-header px-3">
+    <section class="team-header px-4 px-lg-0">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
-            <div class="container p-0">
-                <a class="navbar-brand" href="home.html">
+            <div class="container">
+                <a class="navbar-brand me-0" href="home.html">
                     <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
                 </a>
-                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler text-white border-0 px-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon "></span>
+                    <i class="fas fa-bars px-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fw-bolder">
-                        <li class="nav-item">
-                            <a class="nav-link text-uppercase active text-white" aria-current="page"
-                                href="whatwedo.html">
+                        <li class="nav-item px-lg-2">
+                            <a class="nav-link text-uppercase text-white" href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item px-lg-2">
                             <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white px-0">
-            <div class="row">
-                <div class='col-md-6'>
-                    <p class="text-white fw-bold">Senior team</p>
-                    <h2 class="header-content-heading lh-1 text-light-blue fw-bold mb-4">
-                        Pullquote from the page
-                        <br class="d-xs-block d-md-none" />
-                        can go in this space
-                        <br class="d-xs-none d-md-block" />
-                        here.
-                    </h2>
+        <div class="team-header-content text-white">
+            <div class="container">
+                <div class="row">
+                    <div class='col-md-6'>
+                        <p class="text-white fw-bold mb-3">Senior team</p>
+                        <h2 class="header-content-heading lh-1 text-light-blue fw-bold">
+                            Pullquote from the page
+                            <br class="d-xs-block d-md-none" />
+                            can go in this space
+                            <br class="d-xs-none d-md-block" />
+                            here.
+                        </h2>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Section Header end  -->
     <!-- Section team card  -->
-    <section class="py-4 py-md-5 px-3 team-card">
-        <div class="container p-0">
+    <section class="py-4 pt-lg-5 pt-lg-3 px-4 px-lg-0 team-card">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 mb-4 mb-lg-0">
                     <div class="card border-0">
-                        <div class="card-top">
+                        <div class="card-top position-relative">
                             <img src="./assets/Teamportraits/Andrew_portrait.png" class="card-top-img w-100 h-100"
                                 alt="...">
-                            <div class="card-top-overlay-1 card-top-overlay">
-                                <p class="text-white fw-bolder text-center">
+                            <div class="card-top-overlay position-absolute">
+                                <img src="./assets/Teamportraits/Andrew_portrait_DARK.png"
+                                    class="card-top-img w-100 h-100 position-relative" alt="...">
+                                <p class="text-white fw-bolder text-center position-absolute">
                                     Technology is my hobby as well as my business. I just love it.
                                 </p>
                             </div>
                         </div>
-                        <div class="card-body text-center text-lg-start ps-lg-0">
+                        <div class="card-body text-center text-lg-start ps-lg-0 pb-0">
                             <h5 class="card-title text-blue fw-bold mb-0">Andrew Geidans</h5>
                             <p class="card-text text-blue mb-0 lh-1">
                                 Founder and MD,
@@ -123,8 +126,10 @@
                         <div class="card-top">
                             <img src="./assets/Teamportraits/Jana_portrait.png" class="card-top-img h-100 w-100"
                                 alt="...">
-                            <div class="card-top-overlay-2 card-top-overlay text-center">
-                                <p class="text-white fw-bolder">
+                            <div class="card-top-overlay-2 card-top-overlay text-center position-absolute">
+                                <img src="./assets/Teamportraits/Jana_portrait_DARK.png"
+                                    class="card-top-img w-100 h-100 position-relative" alt="...">
+                                <p class="text-white fw-bolder position-absolute">
                                     Jana makes everything work better
                                 </p>
                             </div>
@@ -151,8 +156,10 @@
                         <div class="card-top">
                             <img src="./assets/Teamportraits/Pavel_portrait.png" class="card-top-img w-100 h-100"
                                 alt="...">
-                            <div class="card-top-overlay-3 card-top-overlay">
-                                <p class="text-white fw-bolder">
+                            <div class="card-top-overlay-3 card-top-overlay position-absolute">
+                                <img src="./assets/Teamportraits/Pavel_portrait_DARK.png"
+                                    class="card-top-img w-100 h-100 position-relative" alt="...">
+                                <p class="text-white fw-bolder position-absolute">
                                     The Geidans go-to guru for all technical and devlopment projects.
                                 </p>
                             </div>
@@ -178,47 +185,56 @@
     </section>
     <!-- Section Team end  -->
     <!-- Section Review start -->
-    <section class="section-review py-4 py-md-5 px-3 bg-orange">
-        <div class="container p-0">
-            <div>
-                <div class="fw-bold text-white d-flex align-items-top">
-                    <h1 class="left-quote align-self-bottom">&#8220;</h1>
-                    <h2 class="section-review-heading ms-md-2 ">
-                        GS ynderstood our challenges
-                        straight away<span class="right-quote">&#8221;</span>
-                    </h2>
-                </div>
+    <section class="section-review px-4 px-lg-0 bg-orange">
+        <div class="container">
+            <div class="fw-bold text-white d-flex align-items-top mb-4">
+                <h1 class="left-quote align-self-bottom d-block d-lg-none">&#8220;</h1>
+                <img src="./assets/Icon images/“.png" alt="quote" class="d-none d-lg-block">
+                <h2 class="section-review-heading fw-bold ms-lg-2 lh-1">
+                    GS ynderstood our challenges
+                    straight away<span class="right-quote">&#8221;</span>
+                </h2>
             </div>
-            <p class="text-blue">
+            <p class="text-blue mb-5 fw-light">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
                 excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
                 similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
                 Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
                 deleniti! Lorem ipsum dolor
+            </p>
             <div class="d-flex mb-3">
-                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star_icon.png" alt="star" class="star-icon me-2 ">
+                <img src="./assets/Icon images/star-half.png" alt="star" class="star-icon-half">
             </div>
-            <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
+            <p class="text-white fw-bolder mb-0"> 4.5 on Google reviews</p>
         </div>
     </section>
     <!-- Section Review end -->
 
     <!-- Section Contact start -->
-    <section class="section-contact px-3">
-        <div class="container p-0">
+    <section class="section-contact px-4 px-lg-0">
+        <div class="container">
             <div class="row">
-                <div class="col-md-7">
-                    <p class="text-blue fw-bold">
+                <div class="col-md-7 d-none d-lg-block">
+                    <h3 class="text-blue fw-bold mb-3">
                         Want to work better, grow faster and compete on a bigger playing field?
-                    </p>
-                    <p class="text-white fw-normal fw-bold">
+                    </h3>
+                    <h3 class="text-white fw-bolder lh-1 mb-0">
                         Give us a call on
                         <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
-                    </p>
+                    </h3>
+                </div>
+                <div class="col-md-7 d-block d-lg-none">
+                    <h3 class="text-blue mb-2">
+                        Want to work better, grow faster and compete on a bigger playing field?
+                    </h3>
+                    <h3 class="text-blue fw-bolder lh-1 mb-0">
+                        Give us a call on
+                        <span class="d-block d-md-inline-block">+44 (0) 3333 444 151</span>
+                    </h3>
                 </div>
             </div>
         </div>
@@ -226,43 +242,46 @@
     <!-- Section Contact end -->
 
     <!-- Footer start  -->
-    <footer class="footer bg-blue py-4 px-3 px-lg-0">
-        <div class="container p-0">
+    <footer class="footer bg-blue py-5 px-4 px-lg-0">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
+                    <h5 class="text-white fw-bold text-uppercase mb-4">
                         get in touch
                     </h5>
-                    <a href="#" class="text-white text-decoration-none d-block mb-2">
+                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
                         <span><i class="fa fa-phone-alt"></i></span>
                         <span class="ms-2">+44 (0) 3333 444 151</span>
                     </a>
-                    <a href="#" class="text-white text-decoration-none d-block mb-2">
+                    <a href="#" class="fw-light text-white text-decoration-none d-block mb-3">
                         <img src="./assets/Icon images/Email_icon.png" alt="" class="email-icon">
                         <span class="ms-2">hello@geidans.co.uk</span>
                     </a>
-                    <p class="text-white mb-0">Address line 1</p>
-                    <p class="text-white mb-0">Address line 2</p>
-                    <p class="text-white mb-0">Address line 3</p>
+                    <p class="text-white mb-2 fw-light">Address line 1</p>
+                    <p class="text-white mb-2 fw-light">Address line 2</p>
+                    <p class="text-white mb-0 fw-light">Address line 3</p>
                 </div>
                 <div class="col-lg-4 d-none d-lg-block ">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bold text-uppercase mb-4">
                         link column here
                     </h5>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-3">Link 1</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block">Link 1</a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0 mb-4">
                         services
                     </h5>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Systems integration</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Bespoke applications</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Consulting</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Data migration</a>
-                    <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Application refactoring</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Systems
+                        integration</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Bespoke
+                        applications</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Consulting</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0 mb-lg-3">Data migration</a>
+                    <a href="#" class="fw-light text-decoration-none text-white d-block mb-0">Application
+                        refactoring</a>
                 </div>
             </div>
         </div>
@@ -271,23 +290,28 @@
     <!-- Footer end -->
 
     <!-- Section Copyright start -->
-    <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
+    <div class="footer-copyright px-4 px-md-0 pt-4 py-lg-3  bg-dark-blue">
         <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
-                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
+                    <div class="d-flex flex-column align-items-center flex-md-row justify-content-between text-center">
                         <p class="mb-0 text-white order-2 order-md-1">&copy; Geidans Solutions 2021</p>
                         <div class="d-flex flex-column flex-lg-row order-1 order-md-2">
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Privacy & GDPR
                             </a>
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Terms
                             </a>
-                            <a href="#" class="footer-copy-link text-decoration-none text-white d-block px-2">
+                            <a href="#"
+                                class="footer-copy-link text-decoration-none text-white d-block px-3 lh-1 py-1 py-lg-0 ">
                                 Legal Notice
                             </a>
-                            <a href="#" class="text-decoration-none text-white d-block px-2">Accessibility </a>
+                            <a href="#"
+                                class="text-decoration-none text-white d-block ps-3 lh-1 py-1 py-lg-0 ">Accessibility
+                            </a>
                         </div>
                     </div>
                 </div>
